--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body{
   align-items: center;
 }
 
-.about-pic, .about-text, .cock, .hot-cock{
+.about-pic, .about-text, .cock, .hot-cock, .yt-lite{
   animation: fadeInAnimation ease .75s;
 }
 
@@ -57,14 +57,6 @@ main{
   max-width: 1024px;
   width: 100%;
   font-size: 17px;
-}
-
-article{
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  margin-top: 20px;
-  font-size: 20px;
 }
 
 a{
@@ -113,6 +105,15 @@ footer{
   min-height: 180px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog-body{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 20px;
+  font-size: 20px;
 }
 
 .continue{
@@ -133,11 +134,33 @@ footer{
   padding: 0px 8px;
 }
 
+.clips{
+  margin-bottom: 24px;
+}
+
+.yt-lite{
+  margin-bottom: 24px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+}
+
+.lty-playbtn{
+  border: none;
+}
+
+.gallery-pic{
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  margin-bottom: 24px;
+  vertical-align: bottom
+}
+
+/*
 .youtube{
   width: 100%;
   aspect-ratio: 16 / 9;
   margin-bottom: 24px;
+  border: none;
 }
+*/
 
 .about{
   margin-top: 18px;
@@ -160,12 +183,19 @@ footer{
   align-items: center;
   flex-direction: column;
   margin-top: 50px;
+  width: 100%;
 }
 
 .cock-container{
   max-width: 400px;
+  width: 100%;
   cursor: pointer;
   position: relative;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.cock {
+  filter: drop-shadow(0px 5px 15px rgba(0, 0, 0, 0.15));
 }
 
 .hot-cock{
@@ -173,7 +203,8 @@ footer{
   left: 0;
   opacity: 1;
   position: absolute;
-  transition: 1s;
+  transition: 1.5s;
+  filter: drop-shadow(0px 5px 15px rgba(0, 0, 0, 0.15));
 }
 
 .cold-cock{
@@ -181,7 +212,8 @@ footer{
   left: 0;
   opacity: 0;
   position: absolute;
-  transition: 1s;
+  transition: 1.5s;
+  filter: drop-shadow(0px 5px 15px rgba(0, 0, 0, 0.15));
 }
 
 .cock-text{
@@ -189,14 +221,13 @@ footer{
   font-weight: bold;
   color: #e93c2c;
   transform: rotate(30deg);
-  top: 50px;
+  top: 40px;
   right: 8px;
   left: auto;
   z-index: 1;
   position: absolute;
+  backface-visibility: hidden;
 }
-
-
 
 /*----------DESKTOP----------*/
 @media (min-width: 768px){
@@ -226,7 +257,7 @@ footer{
   }
 
   .about-text{
-    font-size: 28px;
+    font-size: 25px;
     padding: 0;
     margin: 0;
   }
@@ -237,6 +268,14 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-auto-rows: max-content;
     gap: 30px
+  }
+
+  .gallery-pic{
+    margin-bottom: 0px;
+  }
+
+  .credit{
+    margin-top: 14px;
   }
 
   .shows{
